# deferredAttributeInterpolationShading

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakeUserPresets.json  Pipfile  README.md  conanfile.py  poznamky.md
DeferredAttributeInterpolationShading/: CMakeLists.txt  algorithm.cpp  algorithm.h  app.h  argparse.h  controls.hpp  cornell_box.cpp  layout_constants.h  main.cpp  scene.cpp  scene.h  shader.frag  shader.vert
DeferredAttributeInterpolationShading/algorithms/: deferred_attribute_interpolation_shading.cpp  deferred_attribute_interpolation_shading.h  deferred_shading.cpp  deferred_shading.h  option_declaration_macros.h  uniform_buffer.h
DeferredAttributeInterpolationShading/shaders/deferred_attribute_interpolation_shading/: 01_dais_depth_prepass.frag  01_dais_depth_prepass.vert  02_dais_geometry_pass.frag  02_dais_geometry_pass.geom  02_dais_geometry_pass.vert  03_dais_compute_pass.comp  04_dais_shading_pass.frag
DeferredAttributeInterpolationShading/shaders/deferred_shading/: 00_ds_depth_pre.vert  01_ds_gbuffer.frag  01_ds_gbuffer.vert  01_gbuffer.frag  01_gbuffer.vert  02_deferred.frag  02_ds_deferred.frag  02_ds_deferred.vert
DeferredAttributeInterpolationShading/shaders/lights/: light.frag  light_center.vert  light_range.vert
ForwardShading/: CMakeLists.txt  deferred_shading.frag  deferred_shading.vert  forward_shading.cpp  forward_shading.frag  forward_shading.vert  light.frag  light_center.vert  light_range.vert
TiledDeferredShading/: CMakeLists.txt  algorithm.hpp  controls.hpp  deferred_shading.frag  deferred_shading.vert  forward_shading.cpp  forward_shading.frag  gbuffer.frag  gbuffer.vert  light.frag  light_center.vert  light_count.frag  light_count.vert  light_range.vert  tiled_pre_depth.frag  tiled_pre_depth.vert
common/: CMakeLists.txt
common/include/: camera.h  common.h  defines.h  globals.h  tools.h
common/include/models/: cornell_box.h  cube.h  elephant.h  sphere.h
common/src/: common.cpp  globals.cpp  resources.rc  resources.rc.in  tools.cpp
common/src/models/: sphere.cpp
pgr2_web/: index.html
scripts/: setup_conan.py
shared/: camera.h  common.h  tools.h
shared/cmake/: FindGLEW.cmake  FindGLFW.cmake  FindOpenCL.cmake  FindVulkanSDK.cmake
shared/glew/lib/x86/: glew32.lib  glew32d.lib
shared/glfw/lib/x64/: glfw3.lib  glfw3d.lib
shared/glfw/lib/x86/: glfw3.lib  glfw3d.lib
shared/imgui/: imgui_impl_opengl3.h
shared/implot/: implot.cpp  implot.h
shared/models/: cornell_box.h  cube.h  sphere.h
